--- a/class6/class6.ipynb
+++ b/class6/class6.ipynb
@@ -64,18 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dear Student Your percentage is (per)  now your calculated grade is : \t C\n"
+      "Dear Student Your percentage is (per)  now your calculated grade is : \t A\n"
      ]
     }
    ],
    "source": [
+    "from typing import Union\n",
     "per : Union[int, float] = int(input(\"Enter your percentage : \\t\"))\n",
     "grade : Union[str, None] = None\n",
     "\n",
